--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "deploy": "deploy.sh"
   },
   "dependencies": {
+    "firebase": "^5.7.1",
     "vue": "^2.5.17",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
