--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
     "vuex": "^3.0.1"
   },
   "devDependencies": {
+    "@vue/cli": "^4.0.5",
     "@vue/cli-plugin-babel": "^3.2.0",
     "@vue/cli-plugin-eslint": "^3.2.0",
     "@vue/cli-service": "^3.2.0",
+    "@vue/cli-service-global": "^4.0.5",
     "@vue/eslint-config-standard": "^4.0.0",
     "babel-eslint": "^10.0.1",
+    "core-js": "^2.6.10",
     "eslint": "^5.8.0",
     "eslint-plugin-vue": "^5.0.0-0",
     "node-sass": "^4.9.0",
